k8s/deployment.yaml
# k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ml-model-api
spec:
  replicas: 1  # Reduce replicas to 1 for initial testing
  selector:
    matchLabels:
      app: ml-model-api
  template:
    metadata:
      labels:
        app: ml-model-api
    spec:
      volumes:
      - name: model-volume
        persistentVolumeClaim:
          claimName: model-pvc
      containers:
      - name: ml-model-api
        image: yamal50000/ml-model-api:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
        volumeMounts:
        - name: model-volume
          mountPath: /app/models
        resources:
          requests:
            memory: "500Mi"
            cpu: "250m"
          limits:
            memory: "1Gi"
            cpu: "500m"
        readinessProbe:
          httpGet:
            path: /health
            port: 5000
          initialDelaySeconds: 15
          periodSeconds: 5
